[package]
name = "proq"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "1.0.3"
http = "0.1.21"
url = "1.7"
url_serde = "0.2.0"
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.6.1"
chrono = "0.4.10"