[package]
name = "proq"
version = "0.1.0"
authors = [
    "Mahmut Bulut <vertexclique@gmail.com>",
    "Patrice Billaut <chief.mango.officer@pm.me>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
failure = "0.1.6"
http = "0.1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
serde_urlencoded = "0.6.1"
surf = "1.0.3"
url = "1.7"
url_serde = "0.2.0"
